Fixing the underlining on mobile #23

--- a/site/templates/styles/styles.css
+++ b/site/templates/styles/styles.css
@@ -41,16 +41,13 @@
 	background: transparent;
 	transition: width .5s ease, background-color .5s ease;
 }
-.sliding-middle-out:hover:after {
-	width: 100%;
-	background: #6600cc;
-}
 
 .sliding-white {
 	display: inline-block;
 	position: relative;
 	padding-bottom: 3px;
 }
+
 .sliding-white:after {
 	content: '';
 	display: block;
@@ -60,11 +57,17 @@
 	background: transparent;
 	transition: width .5s ease, background-color .5s ease;
 }
-.sliding-white:hover:after {
-	width: 100%;
-	background: #fff;
-}
 
+@media only screen and (min-width: 767px) {
+	.sliding-white:hover:after {
+		width: 100%;
+		background: #fff;
+	}
+	.sliding-middle-out:hover:after {
+		width: 100%;
+		background: #6600cc;
+	}
+}
 	.breadcrumb {
 		padding-left: 0;
 		margin-bottom: 0px;
